aks-setup/test-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: testapi-deployment
  name: testapi
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: testapi
  template: 
    metadata: 
      labels: 
        app: testapi
    spec: 
      containers: 
        - name: testapi
          image: nginx
          imagePullPolicy: Always
          ports: 
          - containerPort: 80
          
---
apiVersion: v1
kind: Service
metadata:
  name: testapi-service
  labels:
    app: testapi
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: testapi
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,continuationtoken
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: letsencrypt-istioaks
    
spec:
  ingressClassName: nginx 
  tls:
    - hosts:
      - istioaks.centralindia.cloudapp.azure.com
      secretName: tls-secret
  rules:
        
  - host: "istioaks.centralindia.cloudapp.azure.com"
    http:
      paths:
      - pathType: Prefix
        path: /testapi/(.*)
        backend:
          service:
            name: testapi-service
            port:
              number: 8080
